@@ -1,5 +1,11 @@
 2006-06-14  Roland Dreier  <rdreier@cisco.com>
 
+	* src/srp-dm.c: Add support for SMs that support queries of
+	PortInfo that match only specified bits in the CapabilityMask.
+	This will be more efficient on large fabrics, since only ports
+	with the IsDM bit will be queried, instead of retrieving the full
+	node record table for the full fabric.
+
 	* src/srp-dm.h: Change SRP_DM_ATTR_CLASS_PORT_INFO to
 	SRP_ATTR_CLASS_PORT_INFO, since it is not a per-class value.
 
